# medical-rag-reranker

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ML_System_Design_Doc_Medical_RAG_MVP_1.md  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
alembic/: env.py
artifacts/: bm25_index.json.gz.dvc  dense_index.pkl.dvc  hybrid.dvc  hybrid_medcpt_pilot.dvc  index_registry.json  medcpt_pilot_index.pkl.dvc  qdrant_index.json.dvc  retriever.dvc
colab/: 01_train_retriever_and_build_indices.ipynb  02_benchmark_retrieval_reranker_graph.ipynb  03_evaluate_generation_quality.ipynb  04_train_reranker_colab.ipynb  retriever_training_cells.md  write_colab_experiment_notebooks.py
configs/: config.yaml  paths.yaml
data/: processed.dvc  raw.dvc
docker/: README.md
docs/: colab_experiment_plan.md  rag_demo.md  vkr_demo.md
k8s/: 00-namespace.yaml  01-configmap.yaml  01a-registry-secret.placeholder.yaml  01b-workload-serviceaccount.yaml  02-secret.yaml  03-postgres-master-headless-service.yaml  03-postgres-pvc.yaml  04-postgres-deployment.yaml  04-postgres-master-service.yaml  04-postgres-master-statefulset.yaml  04-postgres-service.yaml  04a-postgres-slave-headless-service.yaml  04b-postgres-slave-statefulset.yaml  04c-postgres-slave-service.yaml  05-rabbitmq-deployment.yaml  05-rabbitmq-service.yaml  06-static-deployment.yaml  06-static-service.yaml  07-app-deployment.yaml  07-app-service.yaml  08-worker.yaml  09-nginx-deployment.yaml  09-nginx-service.yaml  10-basic-auth-secret.example.yaml  11-ingress.yaml  (+1 more)
(+377 files in other folders)
